# routes/api.php
@@ -8,6 +8,7 @@ use App\Modules\Auth\Presentation\Controllers\RegisterController;
 use App\Modules\Feeding\Presentation\Controllers\FeedEntryController;
 use App\Modules\Feeding\Presentation\Controllers\FeedTypeController;
 use App\Modules\Production\Presentation\Controllers\CycleController;
+use App\Modules\Production\Presentation\Controllers\CycleMetricsController;
 use App\Modules\Production\Presentation\Controllers\FarmController;
 use App\Modules\Production\Presentation\Controllers\HarvestController;
 use App\Modules\Production\Presentation\Controllers\HealthController;
@@ -50,6 +51,7 @@ Route::prefix('v1')->group(function (): void {
         Route::get('/cycles/{cycle}/harvests', [HarvestController::class, 'index']);
         Route::post('/cycles/{cycle}/harvests', [HarvestController::class, 'store']);
         Route::get('/harvests/{harvest}', [HarvestController::class, 'show']);
+        Route::get('/cycles/{cycle}/metrics', CycleMetricsController::class);
 
         Route::get('/feed-types', [FeedTypeController::class, 'index']);
         Route::post('/feed-types', [FeedTypeController::class, 'store']);
